--- a/src/LinkDotNet.Blog.Web/Features/Components/ModalDialog.razor
+++ b/src/LinkDotNet.Blog.Web/Features/Components/ModalDialog.razor
@@ -1,5 +1,5 @@
-﻿<div class="modal @modalClass" tabindex="-1" role="dialog" style="display:@modalDisplay; overflow-y: auto;">
-    <div class="modal-dialog modal-lg" role="document">
+<div class="modal @modalClass" tabindex="-1" role="dialog" style="display:@modalDisplay; overflow-y: auto;">
+    <div class="modal-dialog @ModalSizeClass" role="document">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title">@Title</h5>
@@ -24,6 +24,9 @@
 
     [Parameter, EditorRequired]
     public required RenderFragment ChildContent { get; set; }
+
+    [Parameter]
+    public string ModalSizeClass { get; set; } = "modal-lg";
 
     private string modalDisplay = "none;";
     private string modalClass = "";
