--- a/src/LinkDotNet.Blog.Web/Features/ShowBlogPost/ShowBlogPostPage.razor
+++ b/src/LinkDotNet.Blog.Web/Features/ShowBlogPost/ShowBlogPostPage.razor
@@ -9,11 +9,7 @@
 @inject IRepository<BlogPost> BlogPostRepository
 @inject IRepository<ShortCode> ShortCodeRepository
 @inject IJSRuntime JsRuntime
-@inject NavigationManager NavigationManager
 @inject IUserRecordService UserRecordService
-@inject IOptions<ApplicationConfiguration> AppConfiguration
-@inject IOptions<ProfileInformation> ProfileInformation
-@inject IOptions<SupportMeConfiguration> SupportConfiguration
 
 @if (isLoading)
 {
@@ -21,81 +17,16 @@
 }
 else if (!isLoading && BlogPost is null)
 {
-	<ObjectNotFound></ObjectNotFound>
+    <div class="m-auto text-center" id="no-blog-post-error">
+        <h1 class="fs-1">404 - o((⊙﹏⊙))o</h1>
+        <br />
+        <p>I really looked hard but I couldn't find the page you are looking for.</p>
+        <p>Go back to <a href="/">safety</a></p>
+    </div>
 }
 else if (BlogPost is not null)
 {
-    <PageTitle>@BlogPost.Title</PageTitle>
-	<OgData Title="@BlogPost.Title"
-	        AbsolutePreviewImageUrl="@OgDataImage"
-	        Description="@(Markdown.ToPlainText(BlogPost.ShortDescription))"
-	        Keywords="@BlogPost.TagsAsString"
-	        CanonicalRelativeUrl="@BlogPostCanoncialUrl">
-		<StructuredData Headline="@BlogPost.Title"
-		                PreviewImage="@BlogPost.PreviewImageUrl"
-		                PreviewFallbackImage="@BlogPost.PreviewImageUrlFallback"
-		                PublishedDate="@BlogPost.UpdatedDate"
-		                Author="@ProfileInformation.Value.Name"/>
-	</OgData>
-
-	<div class="d-flex justify-content-center pt-2 blog-outer-box">
-		<div class="blog-container">
-			<div class="blog-inner-content">
-				<header class="text-center">
-					<h1 class="fw-bold">@BlogPost.Title</h1></header>
-				<div class="text-dark-emphasis d-flex flex-wrap gap-2">
-					<div class="me-2">
-						<span class="date"></span>
-						<span class="ms-1">@BlogPost.UpdatedDate.ToShortDateString()</span>
-					</div>
-          				<span class="read-time"></span>
-          				<span class="me-2">@BlogPost.ReadingTimeInMinutes minute read</span>
-					@if (BlogPost.Tags is not null && BlogPost.Tags.Any())
-					{
-						<div class="d-flex align-items-center">
-							<span class="blogpost-tag me-2"></span>
-							<div class="d-flex flex-wrap gap-2">
-								@foreach (var tag in BlogPost.Tags)
-								{
-									<a class="goto-tag badge bg-primary rounded-pill text-decoration-none" href="/searchByTag/@(Uri.EscapeDataString(tag))">@tag</a>
-								}
-							</div>
-						</div>
-					}
-				</div>
-
-				<div class="pt-2">
-					<BlogPostAdminActions BlogPostId="@BlogPostId"></BlogPostAdminActions>
-				</div>
-
-				<div class="pt-2">
-					<TableOfContents Content="@BlogPost.Content" CurrentUri="@NavigationManager.Uri"></TableOfContents>
-				</div>
-
-				<div class="blogpost-content">
-					@(EnrichWithShortCodes(BlogPost.Content))
-				</div>
-			</div>
-			<div class="d-flex justify-content-between py-2 border-top border-bottom align-items-center">
-				<Like BlogPost="@BlogPost" OnBlogPostLiked="@UpdateLikes"></Like>
-				<ShareBlogPost></ShareBlogPost>
-			</div>
-            @if (SupportConfiguration.Value.ShowUnderBlogPost)
-            {
-                <DonationSection />
-            }
-            @if (AppConfiguration.Value.ShowSimilarPosts)
-			{
-				<SimilarBlogPostSection BlogPost="@BlogPost" />
-			}
-			<CommentSection></CommentSection>
-		</div>
-	</div>
-
-	@if (AppConfiguration.Value.ShowReadingIndicator)
-	{
-		<ReadingIndicator ContainerCssSelector=".blog-inner-content"/>
-	}
+    <BlogPostDetail BlogPost="@BlogPost" IsPreview="false" ShortCodes="shortCodes" />
 }
 
 @code {
@@ -107,51 +38,25 @@ else if (BlogPost is not null)
 
     private bool isLoading;
 
-	private string OgDataImage => BlogPost!.PreviewImageUrlFallback ?? BlogPost.PreviewImageUrl;
-	private string BlogPostCanoncialUrl => $"blogPost/{BlogPost?.Id}";
-	private IReadOnlyCollection<ShortCode> shortCodes = [];
+    private IReadOnlyCollection<ShortCode> shortCodes = [];
 
-	private BlogPost? BlogPost { get; set; }
+    private BlogPost? BlogPost { get; set; }
 
-	protected override async Task OnInitializedAsync()
-	{
-		shortCodes = await ShortCodeRepository.GetAllAsync();
-	}
-
-	protected override async Task OnParametersSetAsync()
+    protected override async Task OnInitializedAsync()
     {
-	    isLoading = true;
-	    BlogPost = await BlogPostRepository.GetByIdAsync(BlogPostId);
-	    isLoading = false;
+        shortCodes = await ShortCodeRepository.GetAllAsync();
+    }
+
+    protected override async Task OnParametersSetAsync()
+    {
+        isLoading = true;
+        BlogPost = await BlogPostRepository.GetByIdAsync(BlogPostId);
+        isLoading = false;
     }
 
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
         await JsRuntime.InvokeVoidAsync("hljs.highlightAll");
         _ = UserRecordService.StoreUserRecordAsync();
-    }
-
-    private MarkupString EnrichWithShortCodes(string content)
-	{
-		if (shortCodes.Count == 0)
-		{
-			return MarkdownConverter.ToMarkupString(content);
-		}
-
-		var sb = new StringBuilder(content);
-		foreach (var shortCode in shortCodes)
-		{
-			sb.Replace($"[[{shortCode.Name}]]", shortCode.MarkdownContent);
-		}
-
-		return MarkdownConverter.ToMarkupString(sb.ToString());
-	}
-
-    private async Task UpdateLikes(bool hasLiked)
-    {
-        BlogPost = await BlogPostRepository.GetByIdAsync(BlogPostId)
-                   ?? throw new InvalidOperationException("Blog post not found");
-        BlogPost.Likes = hasLiked ? BlogPost.Likes + 1 : BlogPost.Likes - 1;
-        await BlogPostRepository.StoreAsync(BlogPost);
     }
 }
