--- a/src/LinkDotNet.Blog.Web/Features/ShowBlogPost/ShowBlogPostPage.razor
+++ b/src/LinkDotNet.Blog.Web/Features/ShowBlogPost/ShowBlogPostPage.razor
@@ -17,12 +17,7 @@
 }
 else if (!isLoading && BlogPost is null)
 {
-    <div class="m-auto text-center" id="no-blog-post-error">
-        <h1 class="fs-1">404 - o((⊙﹏⊙))o</h1>
-        <br />
-        <p>I really looked hard but I couldn't find the page you are looking for.</p>
-        <p>Go back to <a href="/">safety</a></p>
-    </div>
+   <NoBlogPosts/>
 }
 else if (BlogPost is not null)
 {
